Remove billing / shipping address if order is accepted, properly support variant products

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ wp-content/plugins/hello.php
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+.idea/**/sshConfigs.xml
 
 # Gradle
 .idea/**/gradle.xml
